validator_derive_tests/tests/compile-fail/schema/missing_function.stderr
error: Invalid schema level validation: `function` is required
 --> $DIR/missing_function.rs:4:12
  |
4 | #[validate(schema())]
  |            ^^^^^^
